[gd_scene load_steps=5 format=3 uid="uid://bfr1fxgeao83r"]

[ext_resource type="Script" path="res://inventory_slot.gd" id="1_qh72x"]

[sub_resource type="CanvasTexture" id="CanvasTexture_0rmcc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_57xaa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxmpa"]

[node name="Inventory_Slot" type="Node2D"]
script = ExtResource("1_qh72x")

[node name="Slot_Border" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
scale = Vector2(30, 30)
texture = SubResource("CanvasTexture_0rmcc")
metadata/_edit_lock_ = true

[node name="Slot_Frame" type="Sprite2D" parent="Slot_Border"]
modulate = Color(0.117647, 0.117647, 0.117647, 1)
scale = Vector2(0.833, 0.833)
texture = SubResource("CanvasTexture_57xaa")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
scale = Vector2(1.25, 1.25)
shape = SubResource("RectangleShape2D_kxmpa")
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
